--- a/index.html
+++ b/index.html
@@ -88,13 +88,13 @@
                 <div id="carouselExampleInterval" class="carousel slide" data-mdb-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active" style="height: 350px;" data-mdb-interval="10000">
-                            <img src="https://c4.wallpaperflare.com/wallpaper/1017/647/742/food-pizza-cheese-tomatoes-olives-hd-wallpaper-preview.jpg" alt="..." class="d-block w-100 h-100">
+                            <img src="image/pizza1.jpg" alt="..." class="d-block w-100 h-100">
                         </div>
                         <div class="carousel-item" style="height: 350px;" data-mdb-interval="2000">
-                            <img src="https://c4.wallpaperflare.com/wallpaper/205/168/868/dinner-food-pie-pizza-wallpaper-preview.jpg" alt="..." class="d-block w-100 h-100">
+                            <img src="image/pizza2.jpg" alt="..." class="d-block w-100 h-100">
                         </div>
                         <div class="carousel-item" style="height: 350px;">
-                            <img src="https://c4.wallpaperflare.com/wallpaper/1017/647/742/food-pizza-cheese-tomatoes-olives-hd-wallpaper-preview.jpg" alt="..." class="d-block w-100 h-100">
+                            <img src="image/pizza3.jpg" alt="..." class="d-block w-100 h-100">
                         </div>
                     </div>
                     <button class="carousel-control-prev" data-mdb-target="#carouselExampleInterval" type="button" data-mdb-slide="prev">
@@ -110,7 +110,7 @@
                 <!-- pizza list start -->
                 <div class="d-flex justify-content-around mt-3 mb-3">
                     <div class="card shadow" style="width: 13rem;">
-                        <img src="https://c8.alamy.com/comp/2CFC46C/beautiful-photography-of-tasty-pizza-wooden-table-restaurant-hotels-for-advertising-posters-paper-digital-offset-print-for-page-background-etc-2CFC46C.jpg" alt="..." class="card-img-top rounded-1" style="height: 140px;">
+                        <img src="image/pizza1.jpg" alt="..." class="card-img-top rounded-1" style="height: 140px;">
                         <div class="card-body text-center p-2">
                             <p class="card-text">
                                 <p class="fs-5">Cheese pizza</p>
@@ -119,7 +119,7 @@
                         </div>
                     </div>
                     <div class="card shadow" style="width: 13rem;">
-                        <img src="https://c8.alamy.com/comp/2CFC46C/beautiful-photography-of-tasty-pizza-wooden-table-restaurant-hotels-for-advertising-posters-paper-digital-offset-print-for-page-background-etc-2CFC46C.jpg" alt="..." class="card-img-top rounded-1" style="height: 140px;">
+                        <img src="image/pizza2.jpg" alt="..." class="card-img-top rounded-1" style="height: 140px;">
                         <div class="card-body text-center p-2">
                             <p class="card-text">
                                 <p class="fs-5">Cheese pizza</p>
@@ -128,7 +128,7 @@
                         </div>
                     </div>
                     <div class="card shadow" style="width: 13rem;">
-                        <img src="https://media-cdn.tripadvisor.com/media/photo-s/04/84/52/d4/getlstd-property-photo.jpg" alt="..." class="card-img-top rounded-1" style="height: 140px;">
+                        <img src="image/pizza3.jpg" alt="..." class="card-img-top rounded-1" style="height: 140px;">
                         <div class="card-body text-center p-2">
                             <p class="card-text">
                                 <p class="fs-5">Cheese pizza</p>
@@ -137,7 +137,7 @@
                         </div>
                     </div>
                     <div class="card shadow" style="width: 13rem;">
-                        <img src="https://media-cdn.tripadvisor.com/media/photo-s/04/84/52/d4/getlstd-property-photo.jpg" alt="..." class="card-img-top rounded-1" style="height: 140px;">
+                        <img src="image/pizza4.jpg" alt="..." class="card-img-top rounded-1" style="height: 140px;">
                         <div class="card-body text-center p-2">
                             <p class="card-text">
                                 <p class="fs-5">Cheese pizza</p>
@@ -148,7 +148,7 @@
                 </div>
                 <div class="d-flex justify-content-around mt-3 mb-3">
                     <div class="card shadow" style="width: 13rem;">
-                        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTfqeT0sc7um0EkPRUsUNRv-lKMdERaAQ98j3QXU78mJMdPgPKpeyIw3FPqJ2AltsNEYys&usqp=CAU" alt="..." class="card-img-top rounded-1" style="height: 140px;">
+                        <img src="image/pizza-5.jpg" alt="..." class="card-img-top rounded-1" style="height: 140px;">
                         <div class="card-body text-center p-2">
                             <p class="card-text">
                                 <p class="fs-5">Cheese pizza</p>
@@ -157,7 +157,7 @@
                         </div>
                     </div>
                     <div class="card shadow" style="width: 13rem;">
-                        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTfqeT0sc7um0EkPRUsUNRv-lKMdERaAQ98j3QXU78mJMdPgPKpeyIw3FPqJ2AltsNEYys&usqp=CAU" alt="..." class="card-img-top rounded-1" style="height: 140px;">
+                        <img src="image/pizza6.jpg" alt="..." class="card-img-top rounded-1" style="height: 140px;">
                         <div class="card-body text-center p-2">
                             <p class="card-text">
                                 <p class="fs-5">Cheese pizza</p>
@@ -166,7 +166,7 @@
                         </div>
                     </div>
                     <div class="card shadow" style="width: 13rem;">
-                        <img src="https://st.depositphotos.com/1003814/5052/i/450/depositphotos_50523105-stock-photo-pizza-with-tomatoes.jpg" alt="..." class="card-img-top rounded-1" style="height: 140px;">
+                        <img src="image/pizza1.jpg" alt="..." class="card-img-top rounded-1" style="height: 140px;">
                         <div class="card-body text-center p-2">
                             <p class="card-text">
                                 <p class="fs-5">Cheese pizza</p>
@@ -175,7 +175,7 @@
                         </div>
                     </div>
                     <div class="card shadow" style="width: 13rem;">
-                        <img src="https://st.depositphotos.com/1003814/5052/i/450/depositphotos_50523105-stock-photo-pizza-with-tomatoes.jpg" alt="..." class="card-img-top rounded-1" style="height: 140px;">
+                        <img src="image/pizza2.jpg" alt="..." class="card-img-top rounded-1" style="height: 140px;">
                         <div class="card-body text-center p-2">
                             <p class="card-text">
                                 <p class="fs-5">Cheese pizza</p>
